--- a/source/requirements.txt
+++ b/source/requirements.txt
@@ -4,3 +4,12 @@ django-user-accounts==3.0.0
 Pillow==7.1.1
 pytz==2019.3
 sqlparse==0.3.1
+behave==1.2.6
+behave-django==1.3.0
+django-cors-headers==3.2.0
+django-widget-tweaks==1.4.5
+parse==1.14.0
+parse-type==0.5.2
+selenium==3.141.0
+six==1.13.0
+urllib3==1.25.7
